[gd_scene load_steps=17 format=2]

[ext_resource path="res://script/decorations.gd" type="Script" id=1]
[ext_resource path="res://script/enemies.gd" type="Script" id=2]
[ext_resource path="res://script/tf_test.gd" type="Script" id=3]
[ext_resource path="res://script/obstacles.gd" type="Script" id=4]
[ext_resource path="res://script/players.gd" type="Script" id=5]
[ext_resource path="res://scene/BasicEnemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/Obstacle.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/DepthManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://worm/SpawnKinematic.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/DeathScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://script/background_noise.gd" type="Script" id=11]
[ext_resource path="res://scene/AllEnemiesDead.tscn" type="PackedScene" id=12]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec3 color = vec3(1f, 1f, 1f);
uniform int layer = 1;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	float l_off = float(layer) * 0.1;
	COLOR.x = max(COLOR.x, 0.1) + l_off;
	COLOR.y = max(COLOR.y, 0.1) + l_off;
	COLOR.z = max(COLOR.z, 0.1) + l_off;
	COLOR.x *= color.x;
	COLOR.y *= color.y;
	COLOR.z *= color.z;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 4 )
shader_param/color = Vector3( 1, 1, 1 )
shader_param/layer = 1

[sub_resource type="OpenSimplexNoise" id=1]
octaves = 1
period = 32.0
persistence = 1.0
lacunarity = 1.0

[sub_resource type="NoiseTexture" id=2]
flags = 2
width = 4096
height = 2048
noise = SubResource( 1 )
noise_offset = Vector2( 2, 0 )

[node name="TestLevel2" type="Node2D"]
position = Vector2( 1, -4 )
script = ExtResource( 3 )

[node name="Enemies" type="Node" parent="."]
script = ExtResource( 2 )

[node name="BasicEnemy" parent="Enemies" instance=ExtResource( 6 )]
idle_patrol = PoolVector2Array( 50, 50, 500, 50, 500, 500, 50, 500 )

[node name="Players" type="Node" parent="."]
script = ExtResource( 5 )

[node name="SpawnKinematic" parent="Players" instance=ExtResource( 9 )]
position = Vector2( -246, -377 )
max_speed = 600

[node name="Obstacles" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Obstacle2" parent="Obstacles" instance=ExtResource( 7 )]
position = Vector2( 46, 210 )
uvs = PoolVector2Array( 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.45, 0.45, 0.35, 0.35, 0.45, 0.45, 0.5, 0.5, 0.4, 0.4, 0.5, 0.5, 0.4, 0.4 )
points = PoolVector2Array( -25, -100, 25, -120, 50, 50, 0, 20, 5, 80, -40, 90, -100, 80, -40, 70, -30, -20, 0, 0 )

[node name="Obstacle3" parent="Obstacles" instance=ExtResource( 7 )]
position = Vector2( 423, 138 )
rotation = -1.1331
layer = 1
uvs = PoolVector2Array( 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.45, 0.45, 0.35, 0.35, 0.45, 0.45, 0.5, 0.5, 0.4, 0.4, 0.5, 0.5, 0.4, 0.4 )
points = PoolVector2Array( -25, -100, 25, -120, 50, 50, 0, 20, 5, 80, -40, 90, -100, 80, -40, 70, -30, -20, 0, 0 )

[node name="Obstacle4" parent="Obstacles" instance=ExtResource( 7 )]
position = Vector2( 389, 483 )
rotation = 0.894925
uvs = PoolVector2Array( 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.45, 0.45, 0.35, 0.35, 0.45, 0.45, 0.5, 0.5, 0.4, 0.4, 0.5, 0.5, 0.4, 0.4 )
points = PoolVector2Array( -25, -100, 25, -120, 50, 50, 0, 20, 5, 80, -40, 90, -100, 80, -40, 70, -30, -20, 0, 0 )

[node name="Decorations" type="Node" parent="."]
script = ExtResource( 1 )

[node name="DepthManager" parent="." instance=ExtResource( 8 )]

[node name="DeathScreen" parent="." instance=ExtResource( 10 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -158.0
margin_top = -37.0
margin_right = 154.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="AllEnemiesDead" parent="." instance=ExtResource( 12 )]
visible = false
margin_right = 456.0
margin_bottom = 72.0

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource( 11 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
material = SubResource( 3 )
position = Vector2( 1969, 956 )
texture = SubResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 4096, 2048 )

[connection signal="all_enemies_dead" from="Enemies" to="." method="_on_all_enemies_dead"]
[connection signal="bullet_created" from="Enemies/BasicEnemy" to="." method="attach_bullet"]
[connection signal="died" from="Enemies/BasicEnemy" to="Enemies" method="_on_Enemy_died"]
[connection signal="all_players_dead" from="Players" to="." method="_on_all_players_dead"]
[connection signal="died" from="Players/SpawnKinematic" to="Players" method="_on_Player_died"]
[connection signal="layer_visibility_changed" from="Players/SpawnKinematic" to="DepthManager" method="_on_layer_visibility_changed"]
[connection signal="segment_changed" from="Players/SpawnKinematic" to="DepthManager" method="_on_segment_changed"]
[connection signal="switch_layer_pressed" from="Players/SpawnKinematic" to="DepthManager" method="_on_switch_layer_pressed"]
[connection signal="layer_changed" from="DepthManager" to="Background" method="_on_layer_changed"]
[connection signal="restart" from="DeathScreen" to="." method="_on_restart"]
